--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="header-actions">
                     <a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a>
                     <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn-small" target="_blank">Schedule Now</a>
-                    <a href="#sms-privacy" onclick="console.log('SMS Policy clicked'); showSmsPrivacyModal(); return false;" style="color: var(--primary); text-decoration: none; font-size: 0.9em; margin-left: 10px;">📱 SMS Policy</a>
+                    <a href="#sms-privacy" data-action="show-sms-modal" style="color: var(--primary); text-decoration: none; font-size: 0.9em; margin-left: 10px;">📱 SMS Policy</a>
                 </div>
             </div>
         </div>
@@ -198,7 +198,7 @@
                 <p>&copy; 2025 Allen Psychiatry. All Rights Reserved.</p>
                 <p style="font-size: 0.85em; font-style: italic; margin-top: 10px; color: #888;"><strong>IMPORTANT!</strong> All information presented in this website is intended for informational purposes only and not for the purpose of rendering medical advice. Statements made on this website have not been evaluated by the Food and Drug Administration. The information contained herein is not intended to diagnose, treat, cure or prevent any disease.</p>
                 <p style="margin-top: 20px; font-size: 1.1em; font-weight: 600;">
-                    <a href="#sms-privacy" style="color: var(--primary); text-decoration: underline; background: #f0f8ff; padding: 8px 12px; border-radius: 4px; display: inline-block;" onclick="showSmsPrivacyModal(); return false;">📱 SMS Privacy Policy</a>
+                    <a href="#sms-privacy" data-action="show-sms-modal" style="color: var(--primary); text-decoration: underline; background: #f0f8ff; padding: 8px 12px; border-radius: 4px; display: inline-block;">📱 SMS Privacy Policy</a>
                 </p>
             </div>
         </div>
@@ -206,9 +206,67 @@
     
     <a href="#" id="back-to-top-btn"><i class="fa fa-arrow-up"></i></a>
 
-            <script src="navigation.js"></script>
+    <!-- SMS Privacy Policy Modal -->
+    <div id="smsPrivacyModal" class="sms-privacy-modal" style="display: none;">
+        <div class="sms-privacy-modal-content">
+            <div class="modal-header">
+                <h3>SMS Privacy Policy</h3>
+                <button class="modal-close" data-action="close-modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <h4>Information We Collect</h4>
+                <p>When you provide your phone number for SMS communications, we collect:</p>
+                <ul>
+                    <li>Your phone number</li>
+                    <li>Message delivery status</li>
+                    <li>Message content (appointment reminders, confirmations)</li>
+                    <li>Timestamps of communications</li>
+                </ul>
+
+                <h4>How We Use Your Information</h4>
+                <p>We use your phone number and SMS data to:</p>
+                <ul>
+                    <li>Send appointment reminders and confirmations</li>
+                    <li>Provide important practice updates</li>
+                    <li>Send treatment-related communications</li>
+                    <li>Improve our communication services</li>
+                </ul>
+
+                <h4>Information Sharing</h4>
+                <p>We do not sell, trade, or rent your phone number or SMS data to third parties. We may share information only:</p>
+                <ul>
+                    <li>With your explicit consent</li>
+                    <li>As required by law</li>
+                    <li>To protect our rights or safety</li>
+                </ul>
+
+                <h4>Data Security</h4>
+                <p>We implement appropriate security measures to protect your SMS data, including encryption and secure storage protocols.</p>
+
+                <h4>Your Rights</h4>
+                <p>You have the right to:</p>
+                <ul>
+                    <li>Opt out of SMS communications at any time</li>
+                    <li>Request access to your SMS data</li>
+                    <li>Request correction of inaccurate information</li>
+                    <li>Request deletion of your data (subject to legal requirements)</li>
+                </ul>
+
+                <h4>Contact Us</h4>
+                <p>For questions about this SMS Privacy Policy, contact us at:</p>
+                <p><strong>Allen Psychiatry</strong><br>
+                3311 North University Ave, Ste 275<br>
+                Provo, UT 84604<br>
+                Phone: (801) 555-0123</p>
+
+                <p><em>Last updated: January 2025</em></p>
+            </div>
+        </div>
+    </div>
+
+    <script src="navigation.js"></script>
     <script src="telehealth-modal.js"></script>
     <script src="patient-portal-modal.js"></script>
-    <script src="sms-privacy-modal.js"></script>
+    <script src="sms-modal-simple.js"></script>
 </body>
 </html> 
