--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
                     </p>
                     <p>
                         <strong>Email:</strong><br>
-                        info@allenpsychiatry.net
+                        <a href="mailto:info@allenpsychiatry.net" onclick="gtag('event', 'email_click', {'event_category': 'Conversion', 'event_label': 'Email - Footer', 'value': 1});" style="color: inherit; text-decoration: none;">info@allenpsychiatry.net</a>
                     </p>
                 </div>
             </div>
@@ -757,7 +757,7 @@
                     <ul>
                         <li>Reply "STOP" to any message</li>
                         <li>Call us at (801) 555-0123</li>
-                        <li>Email us at info@allenpsychiatry.net</li>
+                        <li>Email us at <a href="mailto:info@allenpsychiatry.net" onclick="gtag('event', 'email_click', {'event_category': 'Conversion', 'event_label': 'Email - Footer Link', 'value': 1});" style="color: inherit; text-decoration: underline;">info@allenpsychiatry.net</a></li>
                     </ul>
 
                     <h5>Contact Information</h5>
@@ -766,7 +766,7 @@
                     3311 North University Ave, Ste 275<br>
                     Provo, UT 84604<br>
                     Phone: (801) 555-0123<br>
-                    Email: info@allenpsychiatry.net</p>
+                    Email: <a href="mailto:info@allenpsychiatry.net" onclick="gtag('event', 'email_click', {'event_category': 'Conversion', 'event_label': 'Email - Footer Text', 'value': 1});" style="color: inherit; text-decoration: underline;">info@allenpsychiatry.net</a></p>
 
                     <p style="margin-top: 20px; padding: 15px; background: #f0f8ff; border-left: 4px solid var(--primary); border-radius: 4px;">
                         <strong>Note:</strong> This policy applies only to SMS communications. For our complete privacy policy regarding medical records and other information, please contact our office.
