--- a/ptsd.html
+++ b/ptsd.html
@@ -441,7 +441,7 @@
                     </p>
                     <p>
                         <strong>Email:</strong><br>
-                        info@allenpsychiatry.net
+                        <a href="mailto:info@allenpsychiatry.net" onclick="gtag('event', 'email_click', {'event_category': 'Conversion', 'event_label': 'Email - Footer', 'value': 1});" style="color: inherit; text-decoration: none;">info@allenpsychiatry.net</a>
                     </p>
                 </div>
             </div>
