--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         <div class="header-top">
             <div class="container">
                 <div class="contact-info">
-                    <div><a href="tel:+13855041334" onclick=\"gtag('event', 'phone_call_click\', {'event_category': 'Conversion', 'event_label': 'Phone Call - Header', 'value': 1});" style="color: inherit; text-decoration: none;">(385) 504-1334</a></div>
+                    <div><a href="tel:+13855041334" onclick="gtag('event', 'phone_call_click', {'event_category': 'Conversion', 'event_label': 'Phone Call - Header', 'value': 1});" style="color: inherit; text-decoration: none;">(385) 504-1334</a></div>
                     <div>3311 North University Ave, Ste 275, Provo, UT 84604</div>
                 </div>
                 <div class="header-actions">
