--- a/telehealth.html
+++ b/telehealth.html
@@ -95,8 +95,8 @@
     <main>
       <section class="service-hero">
         <picture>
-            <source srcset="assets/telehealth snowy-winter-landscape.avif" type="image/avif">
-            <source srcset="assets/telehealth snowy-winter-landscape.webp" type="image/webp">
+            <source srcset="assets/telehealth%20snowy-winter-landscape.avif" type="image/avif">
+            <source srcset="assets/telehealth%20snowy-winter-landscape.webp" type="image/webp">
             <img src="assets/telehealth snowy-winter-landscape.jpg" alt="A snowy landscape representing telehealth services" class="hero-image">
         </picture>
         <div class="container">
